tests/invalid/interpolation_method_invalid.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "InterpolationMethodInvalid",
    "description": "Test case: data loader with invalid interpolation method",
    "authors": ["Test Suite"]
  },

  "data_loaders": {
    "BadInterpolation": {
      "type": "gridded_data",
      "loader_id": "TestLoader",
      "provides": {
        "T": { "units": "K", "description": "Temperature" }
      },
      "interpolation": "invalid_interpolation_method"
    }
  },

  "models": {
    "TestModel": {
      "variables": {
        "x": { "type": "state", "units": "1", "default": 1.0 }
      },
      "equations": [
        {
          "lhs": { "op": "D", "args": ["x"], "wrt": "t" },
          "rhs": { "op": "*", "args": [-0.1, "x"] }
        }
      ]
    }
  }
}